--- a/print.html
+++ b/print.html
@@ -177,7 +177,9 @@
 <p>The Garuda Nix Subsystem is a Nix flake which allows easy dual boot with Garuda Linux. But it also provides a framework for pure NixOS, which provides opiniated defaults and a system which can be fully set up by toggling a few module options.</p>
 <h2 id="quick-links"><a class="header" href="#quick-links">Quick links</a></h2>
 <ul>
-<li>Coming soon™️</li>
+<li><a href="./subsystem/quick-start.html">Using as subsystem to Garuda</a></li>
+<li><a href="./nixos-module/quick-start.html">Using as module for NixOS</a></li>
+<li>... coming soon™️</li>
 </ul>
 <h2 id="devshell-and-how-to-enter-it"><a class="header" href="#devshell-and-how-to-enter-it">Devshell and how to enter it</a></h2>
 <p>This NixOS flake provides a <a href="https://github.com/numtide/devshell">devshell</a> which contains all deployment tools as well as handy aliases for common tasks.
