--- a/subsystem/quick-start.html
+++ b/subsystem/quick-start.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Garuda Nix Subsystem documentation</title>
-        <meta name="robots" content="noindex" />
+        <title>Using as subsystem of Garuda - Garuda Nix Subsystem documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -13,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -36,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "dark";
         </script>
 
@@ -84,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">Welcome</li><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Quick start</li><li class="chapter-item expanded "><a href="subsystem/quick-start.html"><strong aria-hidden="true">2.</strong> Using as subsystem of Garuda</a></li><li class="chapter-item expanded "><a href="nixos-module/quick-start.html"><strong aria-hidden="true">3.</strong> Using as NixOS module</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">Welcome</li><li class="chapter-item expanded "><a href="../intro.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Quick start</li><li class="chapter-item expanded "><a href="../subsystem/quick-start.html" class="active"><strong aria-hidden="true">2.</strong> Using as subsystem of Garuda</a></li><li class="chapter-item expanded "><a href="../nixos-module/quick-start.html"><strong aria-hidden="true">3.</strong> Using as NixOS module</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -138,7 +137,7 @@
                     <h1 class="menu-title">Garuda Nix Subsystem documentation</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://gitlab.com/garuda-linux/garuda-nix-subsystem" title="Git repository" aria-label="Git repository">
@@ -170,29 +169,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="garuda-nix-subsystem"><a class="header" href="#garuda-nix-subsystem">Garuda Nix Subsystem</a></h1>
-<p><a href="https://builtwithnix.org"><img src="https://img.shields.io/static/v1?logo=nixos&amp;logoColor=white&amp;label=&amp;message=Built%20with%20Nix&amp;color=41439a" alt="built with nix" /></a>
-<a href="https://gitlab.com/garuda-linux/garuda-nix-subsystem/-/commits/main"><img src="https://gitlab.com/garuda-linux/garuda-nix-subsystem/badges/main/pipeline.svg" alt="pipeline status" /></a></p>
-<h2 id="general-information"><a class="header" href="#general-information">General information</a></h2>
-<p>The Garuda Nix Subsystem is a Nix flake which allows easy dual boot with Garuda Linux. But it also provides a framework for pure NixOS, which provides opiniated defaults and a system which can be fully set up by toggling a few module options.</p>
-<h2 id="quick-links"><a class="header" href="#quick-links">Quick links</a></h2>
-<ul>
-<li><a href="./subsystem/quick-start.html">Using as subsystem to Garuda</a></li>
-<li><a href="./nixos-module/quick-start.html">Using as module for NixOS</a></li>
-<li>... coming soon™️</li>
-</ul>
-<h2 id="devshell-and-how-to-enter-it"><a class="header" href="#devshell-and-how-to-enter-it">Devshell and how to enter it</a></h2>
-<p>This NixOS flake provides a <a href="https://github.com/numtide/devshell">devshell</a> which contains all deployment tools as well as handy aliases for common tasks.
-The only requirement for using it is having the Nix package manager available. It can be installed on various distributions via the package manager or the following script (<a href="https://zero-to-nix.com/start/install">click me for more information</a>):</p>
-<pre><code class="language-sh">curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix -o nix-install.sh # Check its content afterwards
-sh ./nix-install.sh install --diagnostic-endpoint=&quot;&quot;
-</code></pre>
-<p>This installs the Nix packages with flakes already pre-enabled. After that, the shell can be invoked as follows:</p>
-<pre><code class="language-sh">nix develop # The intended way to use the devshell
-nix-shell # Legacy, non-flakes way if flakes are not available for some reason
-</code></pre>
-<p>This also sets up pre-commit-hooks and shows the currently implemented tasks, which can be executed by running the command shown in the welcome message.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h1>
+                        <h1 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h1>
 <h2 id="intro"><a class="header" href="#intro">Intro</a></h2>
 <p>The original idea behind this project was to use NixOS as a subsystem of Garuda. This means it can be installed easily from a running Garuda installation. This all works via BTRFS subvolumes, therefore any OS other than Garuda is considered unsupported for this method. Settings like users, passwords, and locales are automatically derived from Garuda and change with it. An option to partly share the <code>/home</code> partition between Garuda and NixOS has also been provided.</p>
 <p>At the time of writing, setting up a dr460nized desktop is the only option. This may or may not change in the future.</p>
@@ -204,56 +181,18 @@ garuda-nix-subsystem install # trigger the installation process
 <p>The script will first install Nix, the package manager, and proceed by setting up the required subvolumes. After the process is finished, the subsystem may now be entered by rebooting and selecting the new <code>Garuda Nix Subsystem</code> entry in GRUB.</p>
 <h2 id="updating"><a class="header" href="#updating">Updating</a></h2>
 <p>The system may be updated by running <code>sudo garuda-nix-subsystem update</code> from either Garuda or Garuda Nix Subsystem. This sources the latest tagged commit from our <a href="https://gitlab.com/garuda-linux/garuda-nix-subsystem">Garuda Nix Subsystem repo</a>, which also updates the flake's inputs and therefore all package versions.</p>
-<div style="break-before: page; page-break-before: always;"></div><p>To make use of this flake, you can use it as follows - <a href="https://nixos.wiki/wiki/Flakes#Enable_flakes">we assume flakes to be enabled</a>:</p>
-<pre><code class="language-nix">{
-  description = &quot;My configuration&quot;;
-
-  inputs = {
-    nixpkgs.url = &quot;github:NixOS/nixpkgs/nixpkgs-unstable&quot;;
-    garuda-nix.url = &quot;gitlab:garuda-linux/garuda-nix-subsystem/main&quot;;
-  };
-
-  outputs = { garuda-nix, nixpkgs, ... }: {
-    nixosConfigurations = {
-      hostname = garuda-nix.lib.garudaSystem {
-        system = &quot;x86_64-linux&quot;;
-        modules = [
-          ./configuration.nix # Your system configuration.
-        ];
-      };
-    };
-  };
-}
-</code></pre>
-<p>You may notice that we are using <code>garuda-nix.lib.garudaSystem</code> to build the derivation. <code>garudaSystem</code> provides an opinionated system configuration similar to what Garuda Linux provides out of the box. It also exposes our modules which can then be referenced in our modules like <code>garuda.*</code>. Then, build your configuration as usual. GNS defaults are generally lower priority than your settings, therefore it's easy to override most settings if needed.</p>
-<p>You may also use any of the <a href="https://www.nyx.chaotic.cx/">Chaotic Nyx's</a> module or home-manager options. GNS <code>nixpkgs</code> input follows the Nyx's <code>nyxpkgs-unstable</code> (which updates daily from nixos-stable after caching has been successful) and shouldn't be overridden to profit from their package cache on Cachix.</p>
-<p>An exemplary <code>configuration.nix</code> could look as follows:</p>
-<pre><code class="language-nix">{ ... }: {
-  # Your hardware configuration
-  imports = [ ./hardware-configuration.nix ];
-
-  # Hostname
-  networking.hostName = &quot;yourmachine&quot;;
-
-  # Enabling the dr460nized desktop version
-  # as well as the linux-cachyos kernel and gaming
-  # options and applications
-  garuda = {
-    dr460nized.enable = true;
-    gaming.enable = true;
-    performance-tweaks = {
-      cachyos-kernel = true;
-      enable = true;
-    };
-  };
-}
-</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../intro.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next" href="../nixos-module/quick-start.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -261,7 +200,13 @@ garuda-nix-subsystem install # trigger the installation process
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../intro.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next" href="../nixos-module/quick-start.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -274,21 +219,16 @@ garuda-nix-subsystem install # trigger the installation process
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
-        <script>
-        window.addEventListener('load', function() {
-            window.setTimeout(window.print, 100);
-        });
-        </script>
 
     </div>
     </body>
