deploy: afeef1249710aeeb33ff951442011a1f84ae27d7

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Page not found - Garuda Nix Subsystem documentation</title>
-        <base href="/">
+        <base href="https://nix.garudalinux.org">
 
 
         <!-- Custom HTML head -->
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="theme/css/custom.css">
 
     </head>
     <body>
