--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <p><a href="https://builtwithnix.org"><img src="https://img.shields.io/static/v1?logo=nixos&amp;logoColor=white&amp;label=&amp;message=Built%20with%20Nix&amp;color=41439a" alt="built with nix" /></a>
 <a href="https://gitlab.com/garuda-linux/garuda-nix-subsystem/-/commits/main"><img src="https://gitlab.com/garuda-linux/garuda-nix-subsystem/badges/main/pipeline.svg" alt="pipeline status" /></a></p>
 <h2 id="general-information"><a class="header" href="#general-information">General information</a></h2>
-<p>The Garuda Nix Subsystem is a Nix flake which allows easy dual boot with Garuda Linux. But it also provides a framework for pure NixOS, which provides opiniated defaults and a system which can be fully set up by toggling a few module options.</p>
+<p>The Garuda Nix Subsystem is a Nix flake, which allows easy dual boot with Garuda Linux. But it also provides a framework for pure NixOS, which provides opinionated defaults and a system which can be fully set up by toggling a few module options.</p>
 <h2 id="quick-links"><a class="header" href="#quick-links">Quick links</a></h2>
 <ul>
 <li><a href="./subsystem/quick-start.html">Using as subsystem to Garuda</a></li>
