--- a/print.html
+++ b/print.html
@@ -178,8 +178,8 @@
 <p>The Garuda Nix Subsystem is a Nix flake, which allows easy dual boot with Garuda Linux. But it also provides a framework for pure NixOS, which provides opinionated defaults and a system which can be fully set up by toggling a few module options.</p>
 <h2 id="quick-links"><a class="header" href="#quick-links">Quick links</a></h2>
 <ul>
-<li><a href="./subsystem/quick-start.html">Using as subsystem to Garuda</a></li>
-<li><a href="./nixos-module/quick-start.html">Using as module for NixOS</a></li>
+<li><a href="https://nix.garudalinux.org/subsystem/quick-start">Using as subsystem to Garuda</a></li>
+<li><a href="https://nix.garudalinux.org/nixos-module/quick-start">Using as module for NixOS</a></li>
 <li>... coming soon™️</li>
 </ul>
 <h2 id="devshell-and-how-to-enter-it"><a class="header" href="#devshell-and-how-to-enter-it">Devshell and how to enter it</a></h2>
