--- a/intro.html
+++ b/intro.html
@@ -91,7 +91,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><li class="part-title">Welcome</li><li class="chapter-item expanded "><a href="intro.html" class="active"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Quick start</li><li class="chapter-item expanded "><a href="subsystem/quick-start.html"><strong aria-hidden="true">2.</strong> Using as subsystem of Garuda</a></li><li class="chapter-item expanded "><a href="nixos-module/quick-start.html"><strong aria-hidden="true">3.</strong> Using as NixOS module</a></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
